添加子窗口

--- a/WebTest/WebTest/WebTest.vcxproj
+++ b/WebTest/WebTest/WebTest.vcxproj
@@ -101,6 +101,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DLGBase.h" />
+    <ClInclude Include="DLGMain.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -108,6 +110,8 @@
     <ClInclude Include="WebTestDlg.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DLGBase.cpp" />
+    <ClCompile Include="DLGMain.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -127,4 +131,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="WebTest.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
