--- a/WebTest/WebTest/WebTest.vcxproj.filters
+++ b/WebTest/WebTest/WebTest.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="Resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DLGMain.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DLGBase.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WebTest.cpp">
@@ -42,6 +48,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DLGMain.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DLGBase.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
